<resources>
    <string name="app_name">Les Girls</string>
    <string name="app_name_big">LES GIRLS</string>
    <string name="facebook_app_id">1005525026164043</string>
    <string name="gcm_defaultSenderId">737636461239</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_big">LOGIN</string>
    <string name="log_in_normal">Log in</string>
    <string name="or">or</string>
    <string name="forgot">Forgot?</string>

    <string name="log_in">LOG IN</string>
    <string name="login_with_facebook">Login in with Facebook</string>
    <string name="new_here">New Here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_big">SIGN UP</string>
    <string name="signup_with_facebook">Sign Up with Facebook</string>
    <string name="already">Already have an account?</string>
    <string name="privacy">By signing up you agree to\nPrivacy Policy and Terms  of Service</string>

    <string name="forgot_big">FORGOT PASSWORD</string>
    <string name="send_big">SEND</string>
    <string name="forgot_text">Enter your email address below and we`ll send\ninstructions on how to reset your password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regData">registry</string>
    <string name="login_password_correct">Please enter email and password correct</string>
    <string name="activity">Activity</string>
    <string name="match">Match</string>
    <string name="nearby">Nearby</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="profileName">Profile Name</string>
    <string name="action_settings_big">SETTINGS</string>
    <string name="profile">Profile</string>
    <string name="my_photo">My Photo</string>
    <string name="change_my_profile_picture">Change my profile picture</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="video">Video</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="profile_name">Profile name</string>
    <string name="age">Age</string>
    <string name="i_am_a">I am a</string>
    <string name="looking_for">Looking for</string>
    <string name="password">Password</string>
    <string name="view_my_profile">View my profile</string>
    <string name="share_my_profile">Share my profile</string>
    <string name="description">Description</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="birth_date">Birth date</string>
    <string name="select">Select...</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confir_password">Confirm Password</string>
    <string name="change_password">Change password</string>
    <string name="password_changed">Password changed</string>
    <string name="upload_photo">Upload photo</string>
    <string name="save_big">SAVE</string>
    <string name="entertainment">Entertainment</string>
    <string name="food">Food</string>
    <string name="pets">Pets</string>
    <string name="sports">Sports</string>
    <string name="tv">TV</string>
    <string name="beer">Beer</string>
    <string name="cinema">Cinema</string>
    <string name="camping">Camping</string>
    <string name="travel">Travel</string>
    <string name="nightclub">Nightclub</string>
    <string name="champage">Champagne</string>
    <string name="museum">Museum</string>
    <string name="beach">Beach</string>
    <string name="shopping">Shopping</string>
    <string name="pizza">Pizza</string>
    <string name="curry">Curry</string>
    <string name="bbq">Bbq</string>
    <string name="dinger">Diner Out</string>
    <string name="take_aways">Take away</string>
    <string name="heartly">Healthy living</string>
    <string name="burger">Burger</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_big">PROFILE</string>
    <string name="action_block">Block</string>
    <string name="action_photo">Photo</string>
    <string name="action_message">Messages</string>
    <string name="action_report">Report</string>
    <string name="action_video">Video</string>
    <string name="action_get_notification">Get Notification</string>
    <string name="title_activity_act">ActActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="following">Following</string>
    <string name="you">You</string>
    <string name="seen">Seen</string>


</resources>
