<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_block"
        android:orderInCategory="100"
        android:title="@string/action_block"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_photo"
        android:orderInCategory="101"
        android:title="@string/action_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_messages"
        android:orderInCategory="102"
        android:title="@string/action_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="103"
        android:title="@string/action_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_video"
        android:orderInCategory="104"
        android:title="@string/action_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_get_notification"
        android:orderInCategory="105"
        android:title="@string/action_get_notification"
        app:showAsAction="never" />


</menu>