<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lesgirls.fragments.settings.MatchSettingsFragment">



    <RelativeLayout
        android:id="@+id/rlBottomPanel"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_centerInParent="true"
            android:text="@string/save_big"
            android:textColor="@color/white"
            android:textSize="@dimen/panel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ScrollView
        android:layout_above="@id/rlBottomPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEntertainment"
                android:layout_marginLeft="@dimen/big"
                android:layout_alignParentTop="true"
                android:text="@string/entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@id/tvEntertainment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/beer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/cinema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/camping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/travel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/nightclub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/champage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/museum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/beach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/shopping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFood"
                android:layout_marginLeft="@dimen/big"
                android:layout_alignParentTop="true"
                android:text="@string/food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@id/tvFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_marginLeft="@dimen/large"
                    android:layout_centerVertical="true"
                    android:text="@string/pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/curry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/bbq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/dinger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/take_aways"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/heartly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <TextView
                        android:layout_marginLeft="@dimen/large"
                        android:layout_centerVertical="true"
                        android:text="@string/burger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/big"
                android:layout_centerVertical="true"
                android:text="@string/pets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/big"
                android:layout_centerVertical="true"
                android:text="@string/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/big"
                android:layout_centerVertical="true"
                android:text="@string/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>
