<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:background="@color/colorAccentLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:scaleType="fitXY"
                    android:src="@drawable/back_button"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/medium_plus"
                    android:layout_width="10dp"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/forgot_big"
                    android:textSize="30sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal|center_vertical"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:text="@string/forgot_text" />
                </RelativeLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/tlEmail"
                android:background="@drawable/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:background="@drawable/back_white_rect"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="25dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rlSend"
                android:background="@drawable/login_corner"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_centerInParent="true"
                    android:text="@string/send_big"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
